syntax = "proto3";

package course;

option go_package = "github.com/nuhmanudheent/online-learning-platform/enrollment-service/proto";

service CourseService {
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse);
}

message GetCourseRequest {
  string id = 1;
}

message GetCourseResponse {
  Course course = 1;
}

message Course {
  string id = 1;
  string title = 2;
  string description = 3;
}
